--- a/src/levels/styles/level2.css
+++ b/src/levels/styles/level2.css
@@ -1,3 +1,13 @@
+.level-2-stage {
+  display: flex;
+  flex-direction: row;
+}
+
+.slider-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .goal-block {
   height: 100px;
   width: 100px;
