--- a/src/component-lib/ColorSlider.css
+++ b/src/component-lib/ColorSlider.css
@@ -28,6 +28,30 @@
   width: 16px;
 }
 
+/* Handle Firefox */
+.slider-input::-moz-range-thumb {
+  -webkit-appearance: none;
+  background: transparent;
+  height: 16px;
+  width: 16px;
+}
+
+/* Handle IE */
+.slider-input::-ms-thumb {
+  -webkit-appearance: none;
+  background: transparent;
+  height: 16px;
+  width: 16px;
+}
+
+.slider-input::-ms-track {
+  width: 100%;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
 .slider-input:focus {
   outline: none;
 }
@@ -37,7 +61,7 @@
   top: 5px;
   width: 100px;
   height: 6px;
-  border-radius: 1px;
+  border-radius: 2px;
   background-color: #dfe2e3;
   pointer-events: none;
 }
@@ -46,7 +70,7 @@
   height: 16px;
   width: 10px;
   background-color: #ffffff;
-  border: 2px solid #999999;
+  border: 1px solid #999999;
   border-radius: 3px;
   position: absolute;
   left: 0;
